@@ -267,6 +267,7 @@ Diehl/Sappel IZAR RC 868 I R4 PL (izar) (non-standard protocol)
 Diehl HYDRUS (hydrus)
 Elster Merlin 868 (emerlin868)
 Elster V200H (ev200)
+Maddalena EVO 868 (evo868)
 Honeywell Q400 (q400)
 Kamstrup Multical 21 (multical21)
 Kamstrup flowIQ 2200 (flowiq2200)
