@@ -220,6 +220,11 @@ Received telegram from: 62626262
                   type: Heat meter (0x43)
                    ver: 0x45
                 driver: compact5
+Received telegram from: 79787776
+          manufacturer: (MAD) Maddalena, Italy (0x3424)
+                  type: Water meter (0x07)
+                   ver: 0x50
+                driver: evo868
 EOF
 
 RES=$($PROG --logfile=$LOGFILE --t1 simulations/simulation_t1.txt 2>&1)
